Finished pizza.html

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,6 +10,7 @@
     <h1>Breakfast Sausage White Cheese Pizza</h1>
     <img src="../img/pizza.jpg" height="550" width="550">
     <h2>A simple breakfast pizza that is easy to make and sure to satisfy!</h2>
+    <p>Ingredients:</p>
     <ul>
         <li>12 ounces ground Italian sausage </li>
         <li>1 tablespoon butter </li>
@@ -20,6 +21,16 @@
         <li>8 ounces pork sausage links, sliced </li>
         <li>12 ounces shredded Monterey Jack cheese </li>
     </ul>
+    <p>Recipe:</p>
+    <ol>
+        <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+        <li>Place sausage in a large, deep skillet. Cook over medium-high heat until evenly brown. Drain, crumble and set aside.</li>
+        <li>Over medium-low heat melt butter in a large saucepan. Add onions. Cook slowly, stirring occasionally, until onions are soft.</li>
+        <li>Place crust on pizza pan. Spread pizza sauce over crust and add Italian sausage.</li>
+        <li>Cover with mozzarella cheese and place sliced links over cheese. </li>
+        <li>Spread Monterey Jack cheese on top of links.</li>
+        <li>Bake in preheated oven for 20 to 25 minutes, until golden.</li>
+    </ol>
 
 </body>
 </html>
