--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
     <h1>Odin Recipies Here!</h1>
     <ul>
-        <li><a href="./recipes/pizza.html">Cheese Pizza</li>
+        <li><img src="./img/pizza.jpg" height="30" width="30"><a href="./recipes/pizza.html">Cheese Pizza</li>
+        <li><img src="./img/burger.jpg" height="30" width="30"><a href="./recipes/hamburger.html">Hamburger</li>
+        <li><img src="./img/spaghetti.jpg" height="30" width="30"><a href="./recipes/spaghetti.html">Spaghetti</li>
     </ul>
 </body>
 </html>
